Add mapper, pagination, exception hierarchy, migrations, and FeignClient
- Section 4: Exception hierarchy with BusinessException, ResourceNotFoundException,
  ConflictException, BusinessRuleException and GlobalExceptionHandler integration
- Section 10: Pagination with Pageable, Page<T>, PageRequest, PageResponse<T> record
- Section 11: MapStruct mapper with basic, field mapping, and custom logic examples
- Section 12: DB migrations (optional) — Flyway SQL versioned + Liquibase YAML,
  comparison table, and conventions
- Section 6: FeignClient added as optional subsection (SB 2.x/3.x only)
- New "Optional Tools" block at top — agent must ask user before generating code

Co-Authored-By: Claude Sonnet 4.6 (1M context) <noreply@anthropic.com>